Update build files

--- a/meson.build
+++ b/meson.build
@@ -93,7 +93,6 @@ else
 		'src/gui/about.cpp',
 		'src/gui/messageDialog.cpp',
 		'src/gui/textbuf.cpp',
-		'src/gui/vuDialog.cpp',
 		'src/gui/vuMeter.cpp'
 	]
 	moc_h += [
@@ -101,14 +100,12 @@ else
 		'src/gui/qjacktrip.h',
 		'src/gui/messageDialog.h',
 		'src/gui/textbuf.h',
-		'src/gui/vuDialog.h',
 		'src/gui/vuMeter.h'
 	]
 	ui_h += [
 		'src/gui/qjacktrip.ui',
 		'src/gui/messageDialog.ui',
-		'src/gui/about.ui',
-		'src/gui/vuDialog.ui'
+		'src/gui/about.ui'
 	]
 
 	if get_option('novs') == true
