--- a/meson.build
+++ b/meson.build
@@ -133,7 +133,6 @@ else
 			'src/gui/vsPing.h',
 			'src/gui/vsUrlHandler.h',
 			'src/gui/vsQmlClipboard.h',
-			'src/gui/vsMacPermissions.h',
 			'src/JTApplication.h'
 		]
 		qt5_dep = dependency('qt5', modules: ['Core', 'Gui', 'Network', 'Widgets', 'Quick', 'Qml', 'Svg', 'NetworkAuth', 'WebSockets'], include_type: 'system')
@@ -188,6 +187,7 @@ if host_machine.system() == 'darwin' and get_option('novs') == false
 	src += ['src/gui/vsMacPermissions.mm']
 	apple_av_dep = dependency('appleframeworks', modules : ['avfoundation'])
 	deps += apple_av_dep
+	moc_h += ['src/gui/vsMacPermissions.h']
 endif
 
 jacktrip = executable('jacktrip', src, prepro_files, include_directories: incdirs, dependencies: deps, c_args: c_defines, cpp_args: defines, install: true )
