--- a/meson.build
+++ b/meson.build
@@ -135,6 +135,11 @@ else
 			'src/gui/vsQmlClipboard.h',
 			'src/JTApplication.h'
 		]
+
+		if host_machine.system() == 'darwin'
+			moc_h += ['src/gui/vsMacPermissions.h']
+		endif
+
 		qt5_dep = dependency('qt5', modules: ['Core', 'Gui', 'Network', 'Widgets', 'Quick', 'Qml', 'Svg', 'NetworkAuth', 'WebSockets'], include_type: 'system')
 		qres = ['src/gui/qjacktrip.qrc']
 	endif
@@ -187,7 +192,6 @@ if host_machine.system() == 'darwin' and get_option('novs') == false
 	src += ['src/gui/vsMacPermissions.mm']
 	apple_av_dep = dependency('appleframeworks', modules : ['avfoundation'])
 	deps += apple_av_dep
-	moc_h += ['src/gui/vsMacPermissions.h']
 endif
 
 jacktrip = executable('jacktrip', src, prepro_files, include_directories: incdirs, dependencies: deps, c_args: c_defines, cpp_args: defines, install: true )
