--- a/meson.build
+++ b/meson.build
@@ -51,6 +51,7 @@ moc_h = ['src/DataProtocol.h',
 	'src/Tone.h',
 	'src/JackTripWorker.h',
 	'src/PacketHeader.h',
+	'src/Regulator.h',
 	'src/Settings.h',
 	'src/UdpDataProtocol.h',
 	'src/UdpHubListener.h',
