--- a/meson.build
+++ b/meson.build
@@ -119,6 +119,7 @@ else
 			'src/gui/vsQuickView.cpp',
 			'src/gui/vsWebSocket.cpp',
 			'src/gui/vsUrlHandler.cpp',
+			'src/gui/vsPermissions.cpp',
 			'src/gui/vsPinger.cpp',
 			'src/gui/vsPing.cpp'
 		]
@@ -129,6 +130,7 @@ else
 			'src/gui/vsServerInfo.h',
 			'src/gui/vsQuickView.h',
 			'src/gui/vsWebSocket.h',
+			'src/gui/vsPermissions.h',
 			'src/gui/vsPinger.h',
 			'src/gui/vsPing.h',
 			'src/gui/vsUrlHandler.h',
