flatpak: disable submodules

--- a/linux/flatpak/org.jacktrip.JackTrip.yml
+++ b/linux/flatpak/org.jacktrip.JackTrip.yml
@@ -44,5 +44,6 @@ modules:
     buildsystem: meson
     sources:
       - type: git
+        disable-submodules: true
         url: https://github.com/jacktrip/jacktrip.git
         branch: main
