--- a/linux/flatpak/org.jacktrip.JackTrip.Devel.yml
+++ b/linux/flatpak/org.jacktrip.JackTrip.Devel.yml
@@ -46,5 +46,6 @@ modules:
       - -Dprofile=development
     sources:
       - type: git
+        disable-submodules: true
         url: https://github.com/jacktrip/jacktrip.git
         branch: dev
