--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -1,3 +1,9 @@
+- Version: "1.6.8"
+  Date: 2022-12-05
+  Description:
+  - (fixed) broken "Yes" button on launch
+  - (fixed) window resizing issues
+  - (fixed) subscribed studios showing up under Public in VS mode
 - Version: "1.6.7"
   Date: 2022-11-03
   Description:
