--- a/build
+++ b/build
@@ -4,7 +4,11 @@
 # Parse command line options
 clean=1
 install=0
-CONFIG=
+BUILD_TIME=$(date -u +"%Y-%m-%d-%H-%M-%S")
+COMMIT_HASH=$(git rev-parse --short HEAD)
+LONG_VERSION=$(git describe --tags)
+SHORT_VERSION=$(echo $LONG_VERSION | sed 's/v\([0-9]*\.[0-9]*\.[0-9]*\).*/\1/')
+CONFIG="DEFINES+=JACKTRIP_BUILD_TIME=\\\"$BUILD_TIME\\\"  DEFINES+=JACKTRIP_COMMIT_HASH=\\\"$COMMIT_HASH\\\" DEFINES+=JACKTRIP_SHORT_VERSION=\\\"$SHORT_VERSION\\\" DEFINES+=JACKTRIP_LONG_VERSION=\\\"$LONG_VERSION\\\""
 UNKNOWN_OPTIONS=
 BUILD_RTAUDIO=0
 RTAUDIO=0
