--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -442,6 +442,9 @@ jobs:
           if [[ "${{ matrix.weakjack }}" == true ]]; then 
             CONFIG_STRING="-Dweakjack=true $CONFIG_STRING"
           fi
+          if [[ "${{ runner.os }}" == 'Linux' ]]; then
+              CONFIG_STRING="-Dwerror=true $CONFIG_STRING"
+          fi
           meson --buildtype release $CONFIG_STRING $BUILD_PATH
           cd $BUILD_PATH
           meson compile
