--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -626,7 +626,7 @@ jobs:
   deploy_gh:
     if: startsWith(github.ref, 'refs/tags/') # run on tagged commits
     needs: build
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     name: 'deploy release'
     env:
       DOWNLOAD_PATH: ${{ github.workspace }}/Install
