--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -4,6 +4,7 @@
   - (added) VS Mode - Start and join inactive studios
   - (added) JackTrip now prints build info on running from console
   - (added) VS Mode - supports changing output volume from the server
+  - (added) VS Mode - Link to video on VS web when connected
   - (updated) signing now happens in the main build workflow
   - (updated) VS mode sorts active studios above inactive studios
   - (updated) cmake build
