--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -1,5 +1,5 @@
-- Version: "1.6.9"
-  Date: 2023-01-18
+- Version: "1.7.0"
+  Date: 2023-01-20
   Description:
   - (added) VS Mode - Start and join inactive studios
   - (added) JackTrip now prints build info on running from console
@@ -18,6 +18,7 @@
   - (fixed) turned a comment warning into an appropriate error
   - (fixed) VS Mode - Join issue withs studios started in app
   - (fixed) hanging app after refreshing studios
+  - (fixed) VS Mode - TCP 19 error after starting a studio
 - Version: "1.6.8"
   Date: 2022-12-05
   Description:
