--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -629,10 +629,10 @@ jobs:
                 "${{ secrets.KEYCHAIN_PWD }}" != "" ]]; \
           then
             echo "Secrets to sign artifacts were configured in the repo"
-            echo "should_run::true" >> $GITHUB_OUTPUT
+            echo "should_run=true" >> $GITHUB_OUTPUT
           else
             echo "Secrets to sign artifacts were not configured in the repo"
-            echo "should_run::false" >> $GITHUB_OUTPUT
+            echo "should_run=false" >> $GITHUB_OUTPUT
           fi
   sign:
     needs: [build, check-secrets]
